exports[`<View /> name defaults to View 1`] = `
<view
  name="View"
  resizingConstraint={undefined}
  style={undefined} />
`;

exports[`<View /> name passes its name 1`] = `
<view
  name="foo"
  resizingConstraint={undefined}
  style={undefined} />
`;

exports[`<View /> passes its children 1`] = `
<view
  name="View"
  resizingConstraint={undefined}
  style={undefined}>
  foo
</view>
`;
